# cue

./: CONTRIBUTING.md  README.ja.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.xml
src-tauri/src/: ai.rs  lib.rs
src/components/: AiSettings.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Dropdown.tsx  Editor.tsx  Header.tsx  ItemList.tsx  ItemRow.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  Toaster.tsx  ui.tsx
src/lib/: ai.ts  db.ts  drag.ts  i18n.ts  markdown.ts  platform.ts  render.ts  search.ts  tauri.ts  update.ts
